# guyvszombies-rs

./: .gitignore  Cargo.toml
assets/: actors.toml  images.toml  weapons.toml
assets/images/: .guy.png-autosave.kra  .zombie_stand.png-autosave.kra  bullet.png~
src/: arena.rs  context.rs  infos.rs  main.rs  metadata.rs  metadata2.rs  snapshot.rs  state.rs  systems.rs
